--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   app:
     build: .
-    container_name: announcements-service
+    container_name: Backend
     ports:
       - '3000:3000'
     depends_on:
