--- a/package.json
+++ b/package.json
@@ -24,11 +24,19 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/multer": "^1.4.12",
+    "axios": "^1.7.7",
     "class-validator": "^0.14.1",
+    "got": "^14.4.4",
+    "mammoth": "^1.8.0",
     "mongoose": "^8.6.3",
     "multer": "1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "textract": "^2.5.0",
+    "uuid": "^11.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -38,9 +46,12 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
+    "@types/textract": "^2.4.5",
+    "@types/uuid": "^10.0.0",
+    "@types/xlsx": "^0.0.35",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.42.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
